--- a/Essenbee.Z80/Essenbee.Z80.csproj
+++ b/Essenbee.Z80/Essenbee.Z80.csproj
@@ -4,4 +4,12 @@
     <TargetFramework>netstandard2.0</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Compile Remove="Z80.Instructions.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Include="Z80.Instructions.cs" />
+  </ItemGroup>
+
 </Project>
