--- a/Essenbee.Z80.Tests/Essenbee.Z80.Tests.csproj
+++ b/Essenbee.Z80.Tests/Essenbee.Z80.Tests.csproj
@@ -14,4 +14,8 @@
     <PackageReference Include="coverlet.collector" Version="1.0.1" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Essenbee.Z80\Essenbee.Z80.csproj" />
+  </ItemGroup>
+
 </Project>
