--- a/Essenbee.Z80.Tests/Essenbee.Z80.Tests.csproj
+++ b/Essenbee.Z80.Tests/Essenbee.Z80.Tests.csproj
@@ -8,6 +8,10 @@
 
   <ItemGroup>
     <PackageReference Include="FakeItEasy" Version="5.3.0" />
+    <PackageReference Include="Microsoft.CodeAnalysis.FxCopAnalyzers" Version="2.9.7">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.3.0" />
     <PackageReference Include="xunit" Version="2.4.1" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.4.1">
