--- a/Essenbee.Spectrum48/Essenbee.Spectrum48.csproj
+++ b/Essenbee.Spectrum48/Essenbee.Spectrum48.csproj
@@ -48,6 +48,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="KeyCode.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SimpleBus.cs" />
