Added ability to load .z80 snapshot files

--- a/Essenbee.Spectrum48/Essenbee.Spectrum48.csproj
+++ b/Essenbee.Spectrum48/Essenbee.Spectrum48.csproj
@@ -51,6 +51,8 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SimpleBus.cs" />
+    <Compile Include="Z80Snapshot.cs" />
+    <Compile Include="Z80FileReader.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
